--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     ],
     "rules": {
         "react/react-in-jsx-scope":"off",
-        "@typescript-eslint/explicit-function-return-type": "off"
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/triple-slash-reference": "off"
     }
 }
