--- a/.eslintrc
+++ b/.eslintrc
@@ -13,11 +13,17 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "no-relative-import-paths"
     ],
     "rules": {
         "react/react-in-jsx-scope":"off",
         "@typescript-eslint/explicit-function-return-type": "off",
-        "@typescript-eslint/triple-slash-reference": "off"
+        "@typescript-eslint/triple-slash-reference": "off",
+        "no-relative-import-paths/no-relative-import-paths":
+        [
+            "warn",
+            {"rootDir": "src", "prefix": "@" }
+        ]
     }
 }
