--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-standard-with-typescript": "^40.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -33,7 +34,8 @@
     "lint-staged": "^15.1.0",
     "prettier": "^3.1.0",
     "typescript": "*",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "lint-staged": {
     "**/*.{ts,tsx,json,yaml,yml,md}": "prettier -w",
