--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
         "react/react-in-jsx-scope":"off",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/triple-slash-reference": "off",
+        "react/no-unescaped-entities": "off",
         "no-relative-import-paths/no-relative-import-paths":
         [
             "warn",
